更换解码方法